# agenda-futbol-telegram-bot

./: .env  .env.example  .gitignore  Dockerfile  README.md  answers.py  app.py  bot.py  helpers.py  pyproject.toml  settings.py  utils.py
.github/workflows/: publish-on-push.yml
api/: app.py
bot/: __init__.py  answers.py  client.py  common.py  decorator.py  handlers.py
commands/: all.py  date.py  help.py  set_alias.py  start.py  today.py  version.py  when.py
gql_client/: queries.py
