[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["David Escobar <david.escobar@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
aiohttp = "3.8.1"
gql = "3.4.0"
matplotlib = "^3.9.2"
pandas = "1.4.3"
python-decouple = "3.6"
pyngrok = "^6.0.0"
pytelegrambotapi = "^4.23.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.97.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
