[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["David Escobar <david.escobar@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
aiohttp = "^3.10.8"
gql = "^3.5.0"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
python-decouple = "^3.8"
pyngrok = "^7.2.0"
pytelegrambotapi = "^4.23.0"
uvicorn = { extras = ["standard"], version = "^0.31.0" }
fastapi = "^0.115.0"
dataframe-image = "^0.2.4"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
